# faac-memory-optimization

./: CMakeLists.txt  README.md  test.c
doc/massif/: massif.out.01  massif.out.02  massif.out.03  massif.out.04  massif.out.05  massif.out.06  massif.out.07  massif.out.08
libfaac/: CMakeLists.txt  bitstream.c  blockswitch.c  coder.h  frame.c  frame.h  huff2.c  tns.c  tns.h
